--- a/progressive-overload-cli.cabal
+++ b/progressive-overload-cli.cabal
@@ -1,67 +1,73 @@
--- This file has been generated from package.yaml by hpack version 0.23.0.
+-- This file has been generated from package.yaml by hpack version 0.22.0.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 3164218b36b1dd5919075d5e49c5aa5d0747d1738f3ee886ab37bed17e163e4d
+-- hash: ebb5965fd33def9206ded79eba04527578c4f35f87ca8e2337cb3742c1affb2a
 
 name:           progressive-overload-cli
 version:        0.1.1
 synopsis:       A tool for helping you program your workouts.
 description:    See README at <https://github.com/swanysimon/progressive-overload-cli#readme>
-license:        MIT
-license-file:   LICENSE
-maintainer:     Simon Swanson <nomiswanson@gmail.com>
 homepage:       https://github.com/swanysimon/progressive-overload-cli#readme
 bug-reports:    https://github.com/swanysimon/progressive-overload-cli/issues
-cabal-version:  >= 1.10
+maintainer:     Simon Swanson <nomiswanson@gmail.com>
+license:        MIT
+license-file:   LICENSE
 build-type:     Simple
+cabal-version:  >= 1.10
 
 extra-source-files:
     ChangeLog.md
 
 source-repository head
-    type: git
-    location: https://github.com/swanysimon/progressive-overload-cli
+  type: git
+  location: https://github.com/swanysimon/progressive-overload-cli
 
 executable progressive-overload
-    main-is: ProgressiveOverload.hs
-    other-modules:
-        Training.Exercise
-        Training.Repetitions
-        Training.Set
-        Training.Units
-        Training.Weight
-        Training.WorkingSet
-        Training.Workout
-        Paths_progressive_overload_cli
-    hs-source-dirs:
-        bin
-        src
-    ghc-options: -Wall
-    build-depends:
-        base ==4.10.1.0
-    default-language: Haskell2010
+  main-is: ProgressiveOverload.hs
+  other-modules:
+      Plan.Juggernaut.JuggernautProgram
+      Plan.Juggernaut.JuggernautWave
+      Plan.Program
+      Training.Exercise
+      Training.Repetitions
+      Training.Set
+      Training.Units
+      Training.Weight
+      Training.WorkingSet
+      Training.Workout
+      Paths_progressive_overload_cli
+  hs-source-dirs:
+      bin
+      src
+  ghc-options: -Wall
+  build-depends:
+      base ==4.10.1.0
+  default-language: Haskell2010
 
 test-suite spec
-    type: exitcode-stdio-1.0
-    main-is: TestRunner.hs
-    other-modules:
-        Training.Exercise
-        Training.Repetitions
-        Training.Set
-        Training.Units
-        Training.Weight
-        Training.WorkingSet
-        Training.Workout
-        Training.WeightTests
-        Paths_progressive_overload_cli
-    hs-source-dirs:
-        src
-        test-src
-    ghc-options: -Wall
-    cpp-options: -DTEST
-    build-depends:
-        base ==4.10.1.0,
-        hspec ==2.4.7,
-        random ==1.1
-    default-language: Haskell2010
+  type: exitcode-stdio-1.0
+  main-is: TestRunner.hs
+  other-modules:
+      Plan.Juggernaut.JuggernautProgram
+      Plan.Juggernaut.JuggernautWave
+      Plan.Program
+      Training.Exercise
+      Training.Repetitions
+      Training.Set
+      Training.Units
+      Training.Weight
+      Training.WorkingSet
+      Training.Workout
+      Training.WeightTests
+      Paths_progressive_overload_cli
+  hs-source-dirs:
+      src
+      test-src
+  ghc-options: -Wall
+  cpp-options: -DTEST
+  build-depends:
+      base ==4.10.1.0
+    , hspec ==2.4.7
+    , random ==1.1
+  default-language: Haskell2010
