--- a/progressive-overload-cli.cabal
+++ b/progressive-overload-cli.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 50d9c84d66098927b5529ca43e5fba8fc2f1b0619333aadea516af6e43a8fade
+-- hash: fd3c48800cb0786234731c6a66314c30e8cd191c8b929d4751118e0f4dac6d8c
 
 name:           progressive-overload-cli
 version:        0.1.1
@@ -63,5 +63,6 @@ test-suite spec
       Training.WorkingSet
       Training.Workout
       Training.WeightTests
+      Training.WeightTestsHelper
       Paths_progressive_overload_cli
   default-language: Haskell2010
