--- a/progressive-overload-cli.cabal
+++ b/progressive-overload-cli.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 63d1cf655400ffaffb9f53acec99841de9ccba8caf8078d109e43ac95add64da
+-- hash: dce4497118b2e67f38cdc9cafd7bfc19a844b25d97b5301dc87754af57f019be
 
 name:           progressive-overload-cli
 version:        0.1.1
@@ -28,7 +28,7 @@ executable progressive-overload
   hs-source-dirs:
       bin
       src
-  ghc-options: -Wall
+  ghc-options: -Werror
   build-depends:
       base ==4.10.1.0
   other-modules:
@@ -54,7 +54,7 @@ test-suite spec
   hs-source-dirs:
       src
       test-src
-  ghc-options: -Wall
+  ghc-options: -threaded -Werror
   cpp-options: -DTEST
   build-depends:
       base ==4.10.1.0
@@ -74,7 +74,10 @@ test-suite spec
       Training.WorkingSet
       Training.Workout
       Util.CycleEnum
+      Plan.Juggernaut.JuggernautPhaseSpec
+      Plan.Juggernaut.JuggernautWaveSpec
+      Training.CommonKilogramWeights
+      Training.CommonPoundWeights
       Training.WeightSpec
-      Training.WeightTestsHelper
       Paths_progressive_overload_cli
   default-language: Haskell2010
